# ShellTerminal

./: CMakeLists.txt  README.md
gtest/.nvim/: shell_test.cpp.2025-06-21T00_24_01-07_00.hash
include/: history.h  internals.h  shell.h
include/.nvim/: history.h.2025-06-23T22_58_52-07_00.hash  history.h.2025-06-23T22_58_52-07_00.nvim  history.h.2025-06-23T22_58_53-07_00.hash  history.h.2025-06-23T22_58_53-07_00.nvim  history.h.2025-06-23T23_18_28-07_00.hash  history.h.2025-06-23T23_18_28-07_00.nvim  internals.h.2025-06-23T22_55_16-07_00.hash  internals.h.2025-06-23T22_55_16-07_00.nvim  shell.h.2025-06-21T17_40_43-07_00.hash  shell.h.2025-06-21T17_40_43-07_00.nvim
src/: history.c  internals.c  shell.c
src/.nvim/: history.c.2025-06-23T23_00_01-07_00.hash  history.c.2025-06-23T23_00_01-07_00.nvim  history.c.2025-06-23T23_00_04-07_00.hash  history.c.2025-06-23T23_00_04-07_00.nvim  internals.c.2025-06-24T02_29_47-07_00.hash  internals.c.2025-06-24T02_29_48-07_00.nvim  shell.c.2025-06-21T00_55_44-07_00.hash  shell.c.2025-06-21T01_34_43-07_00.hash  shell.c.2025-06-21T01_34_43-07_00.nvim  shell.c.2025-06-21T01_42_06-07_00.hash  shell.c.2025-06-21T01_42_06-07_00.nvim  shell.c.2025-06-21T01_42_35-07_00.hash  shell.c.2025-06-21T01_42_35-07_00.nvim  shell.c.2025-06-21T01_42_58-07_00.hash  shell.c.2025-06-21T01_42_58-07_00.nvim  shell.c.2025-06-21T01_45_42-07_00.hash  shell.c.2025-06-21T01_45_42-07_00.nvim  shell.c.2025-06-21T01_51_03-07_00.hash  shell.c.2025-06-21T01_51_03-07_00.nvim  shell.c.2025-06-21T01_53_21-07_00.hash  shell.c.2025-06-21T01_53_21-07_00.nvim  (+27 more)
(+32 files in other folders)
